 
CMAKE_MINIMUM_REQUIRED( VERSION 2.6 )

MACRO( ADD_FILTER group_name )
	SOURCE_GROUP( ${group_name} FILES ${ARGN} )
	SET( SRC_FILES ${SRC_FILES} ${ARGN} )
	#MESSAGE( ${ARGN} )
ENDMACRO( ADD_FILTER group_name files )


# solution

PROJECT( Mengine_WIN64 )

SET(MENGINE_TARGET "WIN64")

SET(MENGINE_TARGET_MSVC ON)
SET(MENGINE_PLATFORM_WIN64 ON)

INCLUDE( ../win64_template.cmake )

SET( MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../.. )

# output paths
SET( CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/${MENGINE_LIB_DIR} )
SET( CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/bin_win64 )

# input and thirdparty paths
SET( THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies )
SET( SOURCE_DIR ${MENGINE_REPOSITORY}/src )
SET( CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/WIN64/${CMAKE_GENERATOR}/${CMAKE_BUILD_TYPE} )

# implementation
SET(MENGINE_ASTRALAX_PARTICLE2_DLL ON CACHE BOOL "Astralax Particle" FORCE)
SET(MENGINE_WIN32_SOCKET_DLL OFF CACHE BOOL "Socket" FORCE)
SET(MENGINE_STEAM_PLUGIN OFF CACHE BOOL "Steam Plugin" FORCE)

SET( APPLICATION_DEPENDENCIES )
SET( APPLICATION_LIBS )

INCLUDE_DIRECTORIES( ${SOURCE_DIR} )
INCLUDE_DIRECTORIES( ${SOURCE_DIR}/Utils )
INCLUDE_DIRECTORIES( ${THIRDPARTY_DIR}/boost )
INCLUDE_DIRECTORIES( ${THIRDPARTY_DIR}/stdex/include )

ADD_SUBDIRECTORY( ${SOURCE_DIR} ${CMAKE_TEMP_DIR}/src )

ADD_SUBDIRECTORY( ${SOURCE_DIR}/WindowsLayer ${CMAKE_TEMP_DIR}/WindowsLayer )
ADD_SUBDIRECTORY( ${SOURCE_DIR}/WinApplication ${CMAKE_TEMP_DIR}/WinApllication )

ADD_DEPENDENCIES( WinApplication ${APPLICATION_DEPENDENCIES} )
