CMAKE_MINIMUM_REQUIRED(VERSION 3.0)

PROJECT(Mengine_Xcode_IOS_SDL_Simulator)

INCLUDE(../macro_template.cmake)
INCLUDE(../xcode_ios_template.cmake)

SET_MENGINE_ENVIRONMENT(PYTHON IOS OPENGL X32 SDL XCODE)

SET(MENGINE_REPOSITORY ${CMAKE_CURRENT_SOURCE_DIR}/../..)

# output paths
SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/build_temp/${PROJECT_NAME})
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${MENGINE_REPOSITORY}/bin/xcode_ios_sdl_simulator)

# input and thirdparty paths
SET(THIRDPARTY_DIR ${MENGINE_REPOSITORY}/dependencies)
SET(THIRDPARTY_LIB_DIR ${MENGINE_REPOSITORY}/build_temp/${MENGINE_LIB_DIR}/${CMAKE_BUILD_TYPE})

SET(MENGINE_SOURCE_DIR ${MENGINE_REPOSITORY}/src )
SET(CMAKE_TEMP_DIR ${MENGINE_REPOSITORY}/CMakeTemp/XCODE_IOS_SDL_SIMULATOR/${CMAKE_BUILD_TYPE})

# implementation
ADD_PLUGIN(MENGINE_PLUGIN_TTF OFF OFF "MENGINE_PLUGIN_TTF")
ADD_PLUGIN(MENGINE_PLUGIN_SPINE OFF OFF "MENGINE_PLUGIN_SPINE")
ADD_PLUGIN(MENGINE_PLUGIN_CURL OFF OFF "MENGINE_PLUGIN_CURL")
ADD_PLUGIN(MENGINE_PLUGIN_ASTRALAX ON OFF "MENGINE_PLUGIN_ASTRALAX")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_SOCKET OFF OFF "MENGINE_PLUGIN_WIN32_SOCKET")

ADD_DEFINITIONS(-DMENGINE_RENDER_TEXTURE_RGBA)
ADD_DEFINITIONS(-DMENGINE_MASTER_RELEASE)

SET( APPLICATION_DEPENDENCIES )
SET( APPLICATION_LIBS )
SET( APPLICATION_LIB_PATHS )

INCLUDE_DIRECTORIES(${MENGINE_SOURCE_DIR})
INCLUDE_DIRECTORIES(${THIRDPARTY_DIR}/stdex/include)

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR} ${CMAKE_TEMP_DIR}/src)
ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/SDLApplication ${CMAKE_TEMP_DIR}/SDLApplication)