CMAKE_MINIMUM_REQUIRED(VERSION 3.10)

SET(MENGINE_PROJECT_NAME "Mengine_Android_SDL" CACHE STRING "Mengine project name")

PROJECT(${MENGINE_PROJECT_NAME})

INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../master_options_template.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../base_template.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../macro_template.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../android_template.cmake)
INCLUDE(${CMAKE_CURRENT_SOURCE_DIR}/../mengine_template.cmake)

SET_MENGINE_ENVIRONMENT(ANDROID OPENGL SDL GRADLE)

ADD_MENGINE_FRAMEWORK()

# plugins
ADD_PLUGIN(MENGINE_PLUGIN_MENGINE ON OFF "MENGINE_PLUGIN_MENGINE")
ADD_PLUGIN(MENGINE_PLUGIN_PYTHONFRAMEWORK ON OFF "MENGINE_PLUGIN_PYTHONFRAMEWORK")
ADD_PLUGIN(MENGINE_PLUGIN_UIFRAMEWORK OFF OFF "MENGINE_PLUGIN_UIFRAMEWORK")
ADD_PLUGIN(MENGINE_PLUGIN_DEVELOPMENTCONVERTER OFF ON "MENGINE_PLUGIN_DEVELOPMENTCONVERTER")
ADD_PLUGIN(MENGINE_PLUGIN_NODEDEBUGRENDER ON OFF "MENGINE_PLUGIN_NODEDEBUGRENDER")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCEVALIDATE OFF OFF "MENGINE_PLUGIN_RESOURCEVALIDATE")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCEPREFETCHER ON OFF "MENGINE_PLUGIN_RESOURCEPREFETCHER")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCECONVERT OFF OFF "MENGINE_PLUGIN_RESOURCECONVERT")
ADD_PLUGIN(MENGINE_PLUGIN_RESOURCEDEBUGGER OFF OFF "MENGINE_PLUGIN_RESOURCEDEBUGGER")
ADD_PLUGIN(MENGINE_PLUGIN_NODEDEBUGGER OFF OFF "MENGINE_PLUGIN_NODEDEBUGGER")
ADD_PLUGIN(MENGINE_PLUGIN_METABUFLOADER ON OFF "MENGINE_PLUGIN_METABUFLOADER")
ADD_PLUGIN(MENGINE_PLUGIN_IMAGE_CODEC ON OFF "MENGINE_PLUGIN_IMAGE_CODEC")
ADD_PLUGIN(MENGINE_PLUGIN_WAV ON OFF "MENGINE_PLUGIN_WAV")
ADD_PLUGIN(MENGINE_PLUGIN_AMPLIFIER ON OFF "MENGINE_PLUGIN_AMPLIFIER")
ADD_PLUGIN(MENGINE_PLUGIN_OGG_VORBIS ON OFF "MENGINE_PLUGIN_OGG_VORBIS")
ADD_PLUGIN(MENGINE_PLUGIN_ZIP ON OFF "MENGINE_PLUGIN_ZIP")
ADD_PLUGIN(MENGINE_PLUGIN_LZ4 ON OFF "MENGINE_PLUGIN_LZ4")
ADD_PLUGIN(MENGINE_PLUGIN_INI ON OFF "MENGINE_PLUGIN_INI")
ADD_PLUGIN(MENGINE_PLUGIN_JSON ON OFF "MENGINE_PLUGIN_JSON")
ADD_PLUGIN(MENGINE_PLUGIN_TEXTUREPACKER OFF OFF "MENGINE_PLUGIN_TEXTUREPACKER")
ADD_PLUGIN(MENGINE_PLUGIN_ETC1 ON OFF "MENGINE_PLUGIN_ETC1")
ADD_PLUGIN(MENGINE_PLUGIN_DDS OFF OFF "MENGINE_PLUGIN_DDS")
ADD_PLUGIN(MENGINE_PLUGIN_JPEG ON OFF "MENGINE_PLUGIN_JPEG")
ADD_PLUGIN(MENGINE_PLUGIN_PNG ON OFF "MENGINE_PLUGIN_PNG")
ADD_PLUGIN(MENGINE_PLUGIN_WEBP ON OFF "MENGINE_PLUGIN_WEBP")
ADD_PLUGIN(MENGINE_PLUGIN_MOVIE ON OFF "MENGINE_PLUGIN_MOVIE")
ADD_PLUGIN(MENGINE_PLUGIN_MOVIE1 ON OFF "MENGINE_PLUGIN_MOVIE1")
ADD_PLUGIN(MENGINE_PLUGIN_VIDEO ON OFF "MENGINE_PLUGIN_VIDEO")
ADD_PLUGIN(MENGINE_PLUGIN_THEORA ON OFF "MENGINE_PLUGIN_THEORA")
ADD_PLUGIN(MENGINE_PLUGIN_BITMAPFONT ON OFF "MENGINE_PLUGIN_BITMAPFONT")
ADD_PLUGIN(MENGINE_PLUGIN_TTF ON OFF "MENGINE_PLUGIN_TTF")
ADD_PLUGIN(MENGINE_PLUGIN_FE ON OFF "MENGINE_PLUGIN_FE")
ADD_PLUGIN(MENGINE_PLUGIN_SPINE OFF OFF "MENGINE_PLUGIN_SPINE")
ADD_PLUGIN(MENGINE_PLUGIN_CURL ON OFF "MENGINE_PLUGIN_CURL")
ADD_PLUGIN(MENGINE_PLUGIN_DAZZLE OFF OFF "MENGINE_PLUGIN_DAZZLE")
ADD_PLUGIN_IF(MENGINE_PLUGIN_ASTRALAX ON OFF "MENGINE_PLUGIN_ASTRALAX" "${THIRDPARTY_DIR}/astralax_android")
ADD_PLUGIN(MENGINE_PLUGIN_STEAM OFF ON "MENGINE_PLUGIN_STEAM")
ADD_PLUGIN(MENGINE_PLUGIN_OZZ_ANIMATION OFF OFF "MENGINE_PLUGIN_OZZ_ANIMATION")
ADD_PLUGIN(MENGINE_PLUGIN_ANDROID_NATIVE_PYTHON ON OFF "MENGINE_PLUGIN_ANDROID_NATIVE_PYTHON")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_SOCKET OFF OFF "MENGINE_PLUGIN_WIN32_SOCKET")
ADD_PLUGIN(MENGINE_PLUGIN_POSIX_SOCKET OFF OFF "MENGINE_PLUGIN_POSIX_SOCKET")
ADD_PLUGIN(MENGINE_PLUGIN_BOX2D OFF OFF "MENGINE_PLUGIN_BOX2D")
ADD_PLUGIN(MENGINE_PLUGIN_GRAPHICS OFF OFF "MENGINE_PLUGIN_GRAPHICS")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_SENTRY OFF OFF "MENGINE_PLUGIN_WIN32_SENTRY")
ADD_PLUGIN(MENGINE_PLUGIN_GOAP OFF OFF "MENGINE_PLUGIN_GOAP")
ADD_PLUGIN(MENGINE_PLUGIN_IMGUI OFF OFF "MENGINE_PLUGIN_IMGUI")
ADD_PLUGIN(MENGINE_PLUGIN_AREAOFINTEREST OFF OFF "MENGINE_PLUGIN_AREAOFINTEREST")
ADD_PLUGIN(MENGINE_PLUGIN_PATHFINDER OFF OFF "MENGINE_PLUGIN_PATHFINDER")
ADD_PLUGIN(MENGINE_PLUGIN_CAMERADEBUGGIZMO OFF OFF "MENGINE_PLUGIN_CAMERADEBUGGIZMO")
ADD_PLUGIN(MENGINE_PLUGIN_DEVELOPMENTCONVERTER OFF OFF "MENGINE_PLUGIN_DEVELOPMENTCONVERTER")
ADD_PLUGIN(MENGINE_PLUGIN_XMLTOBIN OFF OFF "MENGINE_PLUGIN_XMLTOBIN")
ADD_PLUGIN(MENGINE_PLUGIN_XLS_EXPORT OFF OFF "MENGINE_PLUGIN_XLS_EXPORT")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_CONSOLELOGGER OFF OFF "MENGINE_PLUGIN_WIN32_CONSOLELOGGER")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_FILEGROUP OFF OFF "MENGINE_PLUGIN_WIN32_FILEGROUP")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_ANTIFREEZEMONITOR OFF OFF "MENGINE_PLUGIN_WIN32_ANTIFREEZEMONITOR")
ADD_PLUGIN(MENGINE_PLUGIN_WIN32_CRITICALERRORSMONITOR OFF OFF "MENGINE_PLUGIN_WIN32_CRITICALERRORSMONITOR")
ADD_PLUGIN(MENGINE_PLUGIN_SDL_FILEGROUP ON OFF "MENGINE_PLUGIN_SDL_FILEGROUP")
ADD_PLUGIN(MENGINE_PLUGIN_DEVTODEBUG ON OFF "MENGINE_PLUGIN_DEVTODEBUG")

MENGINE_ADD_DEFINITION(MENGINE_RENDER_TEXTURE_RGBA)
MENGINE_ADD_DEFINITION(MENGINE_RENDER_COLOR_RGBA)
#MENGINE_ADD_DEFINITION(MENGINE_SETJMP_UNSUPPORTED)

SET_MENGINE_OUTPUT_DIRECTORY()

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR} ${CMAKE_TEMP_DIR}/src)

ADD_SUBDIRECTORY(${MENGINE_SOURCE_DIR}/SDLApplication ${CMAKE_TEMP_DIR}/SDLApplication)